--- a/src/app/autenticacao/login/login.component.html
+++ b/src/app/autenticacao/login/login.component.html
@@ -10,7 +10,7 @@
             <img src="assets/do-utilizador.png" alt=""  width="80" height="80">
           </div>
           <div class="form-group">
-            <label for="username">Usuário:</label>
+            <label for="username">Email:</label>
             <input type="text" id="username" name="username" class="form-control" [(ngModel)]="usuario.username"
               required>
           </div>
@@ -20,7 +20,7 @@
               required>
           </div>
           <button type="submit" class="btn-submit">Entrar</button>
-          <a href="" class="Cadastro">Cadastrar</a>
+          <a href="/cadastro" class="Cadastro">Cadastrar</a>
         </form>
       </div>
     </div>
