--- a/src/app/autenticacao/cadastro/cadastro.component.css
+++ b/src/app/autenticacao/cadastro/cadastro.component.css
@@ -1,4 +1,4 @@
-.login_body {
+.cadastro_body {
     background-color: #e8e7e3;
     display: flex;
     align-items: center;
@@ -6,13 +6,13 @@
     min-height: 100vh;
 }
 
-.login_main {
+.cadastro_main {
     width: 80%;
     height: 80vh;
     display: flex;
 }
 
-.login_imagem {
+.cadastro_imagem {
     height: 80vh;
     width: 50%;
     display: flex;
@@ -20,7 +20,7 @@
     justify-content: center;
 }
 
-.login_form {
+.cadastro_form {
     width: 70%;
     height: 80vh;
     display: flex;
@@ -30,7 +30,7 @@
 
 /* Estilização do formulário */
 form {
-    background-color: #2C2C2C;
+    background-color:#2C2C2C;
     width: 100%;
     max-width: 40rem; 
     padding: 1.25rem; 
@@ -89,41 +89,30 @@ form {
     background-color: #038114; 
 }
 
-.Cadastro {
-    margin-top: 0.9375rem; 
-    text-decoration: none;
-    color: #fff;
-    transition: color 0.3s;
-}
-
-.Cadastro:hover {
-    color: #c8c6c6;
-}
-
 @media (max-width: 800px) {
-    .login_body {
+    .cadastro_body {
         background-color: #e8e7e3;
         display: block;
         
     }
-    .login_main {
+    .cadastro_main {
         flex-direction: column;
         width: 100%;
         height:auto;
     }
-    .login_imagem{
+    .cadastro_imagem{
         width: 100%;
         align-items: center;
         justify-content: center;
         height: 25vh;
     }
-    .login_imagem img {
+    .cadastro_imagem img {
         margin-top: 8rem;
         width: 100%; 
         height: auto; 
         max-width: 25rem; 
     }
-    .login_form{
+    .cadastro_form{
      width: 100%;
     }
     form{
