--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,29 @@ header {
     width: 100%;
     height: 20vh;
     background-color: #2C2C2C;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu_usuario {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 20px;
+    width: 6%;
+    padding: 5px;
+    height: 10vh;
+    background-color: #e8e7e3;
+    border-radius: 20px 0px 20px 0px;
+}
+
+.menu_perfil {
+    cursor: pointer;
+}
+
+.menu_sair {
+    cursor: pointer;
 }
 
 .menu_logo {
@@ -14,10 +37,12 @@ header {
 
 .menu_logo h1 {
     color: #08a31d;
-    margin: 0; /* Remove a margem padrão do h1 */
+    margin: 0;
+    /* Remove a margem padrão do h1 */
 }
-.menu_logo img{
- margin-left: 5px;
+
+.menu_logo img {
+    margin-left: 5px;
 }
 
 .span1 {
@@ -25,16 +50,36 @@ header {
 }
 
 main {
-    margin-top: 10px;
     display: flex;
+}
 
+.toggle_container {
+    width: 10%;
+}
+
+.toggle_button {
+    margin-top: 15px;
+    background-color: #2C2C2C;
+    height: 10vh;
+    border-radius: 0 20px 20px 0px;
+    width: 45%;
+    display: flex;
+    padding-right: 5px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.toggle_button:hover {
+    background-color: #2c2c2ce1;
+    width: 55%;
 }
 
 .menu_sidebar {
     width: 15%;
-    height: 80vh;
-    border: #2C2C2C 2px solid;
-    display: flex;
+    height: 42vh;
+    border: #908f8f 2px solid;
     flex-direction: column;
 }
 
@@ -42,18 +87,20 @@ main {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #2C2C2C;
-}
-.footer_sidebar{
-border-top: 1px solid #2C2C2C ;
+    height: 5vh;
 }
 
 .title_sidebar {
     margin-left: 5px;
 }
 
-nav{
-height: 80vh;
+nav {
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
+
 ul {
     padding: 0;
     /* Remove o padding padrão da ul */
@@ -81,8 +128,9 @@ li a:hover {
     background-color: #2C2C2C;
     color: #c8c6c6;
 }
-.exit_sidebar{
- cursor: pointer;
+
+.icons_sidebar {
+    cursor: pointer;
 }
 
 .menu_conteudo {
